@@ -661,7 +661,7 @@ $dbi->register_filter(
     three_times => sub { $_[0] * 3 }
 );
 $dbi->default_bind_filter('twice');
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2}, filter => {$key1 => 'three_times'});
+$dbi->insert({$key1 => 1, $key2 => 2}, table => $table1, filter => {$key1 => 'three_times'});
 $result = $dbi->execute("select * from $table1");
 $rows   = $result->all;
 is_deeply($rows, [{$key1 => 3, $key2 => 4}], "filter");
@@ -672,7 +672,7 @@ eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
 $dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3, $key4 => 4, $key5 => 5}, table => $table1);
 $dbi->insert({$key1 => 6, $key2 => 7, $key3 => 8, $key4 => 9, $key5 => 10}, table => $table1);
-$dbi->update(table => $table1, param => {$key2 => 11}, where => {$key1 => 1});
+$dbi->update({$key2 => 11}, table => $table1, where => {$key1 => 1});
 $result = $dbi->execute("select * from $table1 order by $key1");
 $rows   = $result->all;
 is_deeply($rows, [{$key1 => 1, $key2 => 11, $key3 => 3, $key4 => 4, $key5 => 5},
@@ -682,14 +682,14 @@ is_deeply($rows, [{$key1 => 1, $key2 => 11, $key3 => 3, $key4 => 4, $key5 => 5},
 $dbi->execute("delete from $table1");
 $dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3, $key4 => 4, $key5 => 5}, table => $table1);
 $dbi->insert({$key1 => 6, $key2 => 7, $key3 => 8, $key4 => 9, $key5 => 10}, table => $table1);
-$dbi->update(table => $table1, param => {$key2 => 12}, where => {$key2 => 2, $key3 => 3});
+$dbi->update({$key2 => 12}, table => $table1, where => {$key2 => 2, $key3 => 3});
 $result = $dbi->execute("select * from $table1 order by $key1");
 $rows   = $result->all;
 is_deeply($rows, [{$key1 => 1, $key2 => 12, $key3 => 3, $key4 => 4, $key5 => 5},
                   {$key1 => 6, $key2 => 7,  $key3 => 8, $key4 => 9, $key5 => 10}],
                   "update key same as search key");
 
-$dbi->update(table => $table1, param => {$key2 => [12]}, where => {$key2 => 2, $key3 => 3});
+$dbi->update({$key2 => [12]}, table => $table1, where => {$key2 => 2, $key3 => 3});
 $result = $dbi->execute("select * from $table1 order by $key1");
 $rows   = $result->all;
 is_deeply($rows, [{$key1 => 1, $key2 => 12, $key3 => 3, $key4 => 4, $key5 => 5},
@@ -700,7 +700,7 @@ $dbi->execute("delete from $table1");
 $dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3, $key4 => 4, $key5 => 5}, table => $table1);
 $dbi->insert({$key1 => 6, $key2 => 7, $key3 => 8, $key4 => 9, $key5 => 10}, table => $table1);
 $dbi->register_filter(twice => sub { $_[0] * 2 });
-$dbi->update(table => $table1, param => {$key2 => 11}, where => {$key1 => 1},
+$dbi->update({$key2 => 11}, table => $table1, where => {$key1 => 1},
               filter => {$key2 => sub { $_[0] * 2 }});
 $result = $dbi->execute("select * from $table1 order by $key1");
 $rows   = $result->all;
@@ -708,7 +708,7 @@ is_deeply($rows, [{$key1 => 1, $key2 => 22, $key3 => 3, $key4 => 4, $key5 => 5},
                   {$key1 => 6, $key2 => 7,  $key3 => 8, $key4 => 9, $key5 => 10}],
                   "filter");
 
-$result = $dbi->update(table => $table1, param => {$key2 => 11}, where => {$key1 => 1}, append => '   ');
+$result = $dbi->update({$key2 => 11}, table => $table1, where => {$key1 => 1}, append => '   ');
 
 eval{$dbi->update(table => $table1)};
 like($@, qr/where/, "not contain where");
@@ -719,7 +719,7 @@ $dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
 $where = $dbi->where;
 $where->clause(['and', "$key1 = :$key1", "$key2 = :$key2"]);
 $where->param({$key1 => 1, $key2 => 2});
-$dbi->update(table => $table1, param => {$key1 => 3}, where => $where);
+$dbi->update({$key1 => 3}, table => $table1, where => $where);
 $result = $dbi->select(table => $table1);
 is_deeply($result->all, [{$key1 => 3, $key2 => 2}], 'update() where');
 
@@ -727,8 +727,8 @@ eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1);
 $dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
 $dbi->update(
+    {$key1 => 3},
     table => $table1,
-    param => {$key1 => 3},
     where => [
         ['and', "$key1 = :$key1", "$key2 = :$key2"],
         {$key1 => 1, $key2 => 2}
@@ -743,14 +743,14 @@ $dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
 $where = $dbi->where;
 $where->clause(['and', "$key2 = :$key2"]);
 $where->param({$key2 => 2});
-$dbi->update(table => $table1, param => {$key1 => 3}, where => $where);
+$dbi->update({$key1 => 3}, table => $table1, where => $where);
 $result = $dbi->select(table => $table1);
 is_deeply($result->all, [{$key1 => 3, $key2 => 2}], 'update() where');
 
-eval{$dbi->update(table => $table1, param => {';' => 1}, where => {$key1 => 1})};
+eval{$dbi->update({';' => 1}, table => $table1, where => {$key1 => 1})};
 like($@, qr/safety/);
 
-eval{$dbi->update(table => $table1, param => {$key1 => 1}, where => {';' => 1})};
+eval{$dbi->update({$key1 => 1}, table => $table1, where => {';' => 1})};
 like($@, qr/safety/);
 
 eval { $dbi->execute("drop table $table1") };
@@ -758,21 +758,21 @@ eval { $dbi->execute("drop table ${q}table$p") };
 $dbi->execute($create_table_reserved);
 $dbi->apply_filter('table', select => {out => sub { $_[0] * 2}});
 $dbi->apply_filter('table', update => {out => sub { $_[0] * 3}});
-$dbi->insert(table => 'table', param => {select => 1});
-$dbi->update(table => 'table', where => {select => 1}, param => {update => 2});
+$dbi->insert({select => 1}, table => 'table');
+$dbi->update({update => 2}, table => 'table', where => {select => 1});
 $result = $dbi->execute("select * from ${q}table$p");
 $rows   = $result->all;
 is_deeply($rows, [{select => 2, update => 6}], "reserved word");
 
-eval {$dbi->update_all(table => 'table', param => {';' => 2}) };
+eval {$dbi->update_all({';' => 2}, table => 'table') };
 like($@, qr/safety/);
 
 eval { $dbi->execute("drop table ${q}table$p") };
 $dbi->execute($create_table_reserved);
 $dbi->apply_filter('table', select => {out => sub { $_[0] * 2}});
 $dbi->apply_filter('table', update => {out => sub { $_[0] * 3}});
-$dbi->insert(table => 'table', param => {select => 1});
-$dbi->update(table => 'table', where => {'table.select' => 1}, param => {update => 2});
+$dbi->insert({select => 1}, table => 'table');
+$dbi->update({update => 2}, table => 'table', where => {'table.select' => 1});
 $result = $dbi->execute("select * from ${q}table$p");
 $rows   = $result->all;
 is_deeply($rows, [{select => 2, update => 6}], "reserved word");
@@ -792,7 +792,7 @@ eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
 $dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3, $key4 => 4, $key5 => 5}, table => $table1);
 $dbi->insert({$key1 => 6, $key2 => 7, $key3 => 8, $key4 => 9, $key5 => 10}, table => $table1);
-$dbi->update(table => $table1, param => {$key2 => 11}, where => {$key1 => 1},
+$dbi->update({$key2 => 11}, table => $table1, where => {$key1 => 1},
 wrap => {$key2 => sub { "$_[0] - 1" }});
 $result = $dbi->execute("select * from $table1 order by $key1");
 $rows   = $result->all;
@@ -804,7 +804,7 @@ eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
 $dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3, $key4 => 4, $key5 => 5}, table => $table1);
 $dbi->insert({$key1 => 6, $key2 => 7, $key3 => 8, $key4 => 9, $key5 => 10}, table => $table1);
-$dbi->update(table => $table1, param => {$key2 => \"'11'"}, where => {$key1 => 1});
+$dbi->update({$key2 => \"'11'"}, table => $table1, where => {$key1 => 1});
 $result = $dbi->execute("select * from $table1 order by $key1");
 $rows   = $result->all;
 is_deeply($rows, [{$key1 => 1, $key2 => 11, $key3 => 3, $key4 => 4, $key5 => 5},
@@ -873,8 +873,8 @@ is_deeply($rows, [{$key1 => 1, $key2 => 11, $key3 => 3, $key4 => 4, $key5 => 5},
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
 $param = {$key3 => 4};
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
-$dbi->update(table => $table1, param => $param, updated_at => $key2, where => {$key1 => 1});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
+$dbi->update($param, table => $table1, updated_at => $key2, where => {$key1 => 1});
 $result = $dbi->select(table => $table1);
 is_deeply($param, {$key3 => 4});
 $row   = $result->one;
@@ -884,8 +884,8 @@ like($row->{$key2}, qr/^\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}$/);
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
 $param = {$key3 => 4};
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
-$dbi->update(table => $table1, param => $param, updated_at => $key2, where => {$key3 => 3});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
+$dbi->update($param, table => $table1, updated_at => $key2, where => {$key3 => 3});
 $result = $dbi->select(table => $table1);
 is_deeply($param, {$key3 => 4});
 $row   = $result->one;
@@ -896,7 +896,7 @@ eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
 $model = $dbi->create_model(table => $table1, updated_at => $key2);
 $param = {$key3 => 4};
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
 $model->update($param, where => {$key1 => 1});
 $result = $dbi->select(table => $table1);
 is_deeply($param, {$key3 => 4});
@@ -910,7 +910,7 @@ $dbi->execute($create_table1_2);
 $dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3, $key4 => 4, $key5 => 5}, table => $table1);
 $dbi->insert({$key1 => 6, $key2 => 7, $key3 => 8, $key4 => 9, $key5 => 10}, table => $table1);
 $dbi->register_filter(twice => sub { $_[0] * 2 });
-$dbi->update_all(table => $table1, param => {$key2 => 10}, filter => {$key2 => 'twice'});
+$dbi->update_all({$key2 => 10}, table => $table1, filter => {$key2 => 'twice'});
 $result = $dbi->execute("select * from $table1");
 $rows   = $result->all;
 is_deeply($rows, [{$key1 => 1, $key2 => 20, $key3 => 3, $key4 => 4, $key5 => 5},
@@ -993,7 +993,7 @@ $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table ${q}table$p") };
 $dbi->execute($create_table_reserved);
 $dbi->apply_filter('table', select => {out => sub { $_[0] * 2}});
-$dbi->insert(table => 'table', param => {select => 1});
+$dbi->insert({select => 1}, table => 'table');
 $dbi->delete(table => 'table', where => {select => 1});
 $result = $dbi->execute("select * from ${q}table$p");
 $rows   = $result->all;
@@ -1035,7 +1035,7 @@ is_deeply($rows, [{$key1 => 1, $key2 => 2}], "filter");
 
 eval { $dbi->execute("drop table $table2") };
 $dbi->execute($create_table2);
-$dbi->insert(table => $table2, param => {$key1 => 1, $key3 => 5});
+$dbi->insert({$key1 => 1, $key3 => 5}, table => $table2);
 $rows = $dbi->select(
     table => [$table1, $table2],
     column => "$table1.$key1 as ${table1}_$key1, $table2.$key1 as ${table2}_$key1, $key2, $key3",
@@ -1055,7 +1055,7 @@ $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table ${q}table$p") };
 $dbi->execute($create_table_reserved);
 $dbi->apply_filter('table', select => {out => sub { $_[0] * 2}});
-$dbi->insert(table => 'table', param => {select => 1, update => 2});
+$dbi->insert({select => 1, update => 2}, table => 'table');
 $result = $dbi->select(table => 'table', where => {select => 1});
 $rows   = $result->all;
 is_deeply($rows, [{select => 2, update => 2}], "reserved word");
@@ -1103,7 +1103,7 @@ $dbi->execute($create_table1);
 $dbi->begin_work;
 $dbi->dbh->{AutoCommit} = 0;
 $dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
-$dbi->insert(table => $table1, param => {$key1 => 2, $key2 => 3});
+$dbi->insert({$key1 => 2, $key2 => 3}, table => $table1);
 $dbi->commit;
 $dbi->dbh->{AutoCommit} = 1;
 $result = $dbi->select(table => $table1);
@@ -1127,7 +1127,7 @@ $dbi->execute($create_table1);
 
 $query = $dbi->execute("select * from $table1 where $key1 = :$key1", {}, query => 1);
 $dbi->dbh->disconnect;
-eval{$dbi->execute($query, param => {$key1 => {a => 1}})};
+eval{$dbi->execute($query, {$key1 => {a => 1}})};
 ok($@, "execute fail");
 
 {
@@ -1212,7 +1212,7 @@ $dbi->execute($create_table1);
 
 $query = $dbi->execute("select * from $table1 where $key1 = :$key1", {}, query => 1);
 $dbi->dbh->disconnect;
-eval{$dbi->execute($query, param => {$key1 => {a => 1}})};
+eval{$dbi->execute($query, {$key1 => {a => 1}})};
 ok($@, "execute fail");
 
 {
@@ -1287,8 +1287,8 @@ $dbi->register_filter(twice => sub { $_[0] * 2 });
 $dbi->apply_filter(
     $table1, $key1 => {out => 'twice', in => 'twice'}
 );
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2}, filter => {$key1 => undef});
-$dbi->update(table => $table1, param => {$key1 => 2}, where => {$key2 => 2});
+$dbi->insert({$key1 => 1, $key2 => 2},table => $table1, filter => {$key1 => undef});
+$dbi->update({$key1 => 2}, table => $table1, where => {$key2 => 2});
 $result = $dbi->execute("select * from $table1");
 $row   = $result->one;
 is_deeply($row, {$key1 => 4, $key2 => 2}, "update");
@@ -1300,7 +1300,7 @@ $dbi->register_filter(twice => sub { $_[0] * 2 });
 $dbi->apply_filter(
     $table1, $key1 => {out => 'twice', in => 'twice'}
 );
-$dbi->insert(table => $table1, param => {$key1 => 2, $key2 => 2}, filter => {$key1=> undef});
+$dbi->insert({$key1 => 2, $key2 => 2}, table => $table1, filter => {$key1=> undef});
 $dbi->delete(table => $table1, where => {$key1 => 1});
 $result = $dbi->execute("select * from $table1");
 $rows   = $result->all;
@@ -1313,7 +1313,7 @@ $dbi->register_filter(twice => sub { $_[0] * 2 });
 $dbi->apply_filter(
     $table1, $key1 => {out => 'twice', in => 'twice'}
 );
-$dbi->insert(table => $table1, param => {$key1 => 2, $key2 => 2}, filter => {$key1 => undef});
+$dbi->insert({$key1 => 2, $key2 => 2}, table => $table1, filter => {$key1 => undef});
 $result = $dbi->select(table => $table1, where => {$key1 => 1});
 $result->filter({$key2 => 'twice'});
 $rows   = $result->all;
@@ -1326,9 +1326,9 @@ $dbi->register_filter(twice => sub { $_[0] * 2 });
 $dbi->apply_filter(
     $table1, $key1 => {out => 'twice', in => 'twice'}
 );
-$dbi->insert(table => $table1, param => {$key1 => 2, $key2 => 2}, filter => {$key1 => undef});
+$dbi->insert({$key1 => 2, $key2 => 2}, table => $table1, filter => {$key1 => undef});
 $result = $dbi->execute("select * from $table1 where $key1 = :$key1 and $key2 = :$key2",
-                        param => {$key1 => 1, $key2 => 2},
+                        {$key1 => 1, $key2 => 2},
                         table => [$table1]);
 $rows   = $result->all;
 is_deeply($rows, [{$key1 => 4, $key2 => 2}], "execute");
@@ -1340,9 +1340,9 @@ $dbi->register_filter(twice => sub { $_[0] * 2 });
 $dbi->apply_filter(
     $table1, $key1 => {out => 'twice', in => 'twice'}
 );
-$dbi->insert(table => $table1, param => {$key1 => 2, $key2 => 2}, filter => {$key1 => undef});
+$dbi->insert({$key1 => 2, $key2 => 2}, table => $table1, filter => {$key1 => undef});
 $result = $dbi->execute("select * from {table $table1} where $key1 = :$key1 and $key2 = :$key2",
-                        param => {$key1 => 1, $key2 => 2});
+                        {$key1 => 1, $key2 => 2});
 $rows   = $result->all;
 is_deeply($rows, [{$key1 => 4, $key2 => 2}], "execute table tag");
 
@@ -1359,8 +1359,8 @@ $dbi->apply_filter(
 $dbi->apply_filter(
     $table2, $key3 => {out => 'three_times', in => 'three_times'}
 );
-$dbi->insert(table => $table1, param => {$key1 => 5, $key2 => 2}, filter => {$key2 => undef});
-$dbi->insert(table => $table2, param => {$key1 => 5, $key3 => 6}, filter => {$key3 => undef});
+$dbi->insert({$key1 => 5, $key2 => 2}, table => $table1, filter => {$key2 => undef});
+$dbi->insert({$key1 => 5, $key3 => 6}, table => $table2, filter => {$key3 => undef});
 $result = $dbi->select(
      table => [$table1, $table2],
      column => [$key2, $key3],
@@ -1486,9 +1486,9 @@ test 'select query option';
 $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1);
-$query = $dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2}, query => 1);
+$query = $dbi->insert({$key1 => 1, $key2 => 2}, table => $table1, query => 1);
 is(ref $query, 'DBIx::Custom::Query');
-$query = $dbi->update(table => $table1, where => {$key1 => 1}, param => {$key2 => 2}, query => 1);
+$query = $dbi->update({$key2 => 2}, table => $table1, where => {$key1 => 1}, query => 1);
 is(ref $query, 'DBIx::Custom::Query');
 $query = $dbi->delete(table => $table1, where => {$key1 => 1}, query => 1);
 is(ref $query, 'DBIx::Custom::Query');
@@ -1792,8 +1792,8 @@ is_deeply($row, [{$key1 => 1, $key2 => 2}]);
 $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1);
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => '00:00:00'});
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => '3'});
+$dbi->insert({$key1 => 1, $key2 => '00:00:00'}, table => $table1);
+$dbi->insert({$key1 => 1, $key2 => '3'}, table => $table1);
 $where = $dbi->where
              ->clause(['and', "$key1 = :$key1", "$key2 = '00:00:00'"])
              ->param({$key1 => 1});
@@ -1869,11 +1869,11 @@ $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1);
 $dbi->register_filter(twice => sub { $_[0] * 2 });
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2},
+$dbi->insert({$key1 => 1, $key2 => 2}, table => $table1,
              filter => {$key1 => 'twice'});
 $row = $dbi->select(table => $table1)->one;
 is_deeply($row, {$key1 => 2, $key2 => 2});
-eval {$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2},
+eval {$dbi->insert({$key1 => 1, $key2 => 2}, table => $table1,
              filter => {$key1 => 'no'}) };
 like($@, qr//);
 
@@ -1925,7 +1925,7 @@ test 'delete_at';
 $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
 $dbi->delete_at(
     table => $table1,
     primary_key => [$key1, $key2],
@@ -1933,7 +1933,7 @@ $dbi->delete_at(
 );
 is_deeply($dbi->select(table => $table1)->all, []);
 
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
 $dbi->delete_at(
     table => $table1,
     primary_key => $key1,
@@ -2406,8 +2406,8 @@ eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1);
 $dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
 $dbi->update(
+    {$key1 => 5},
     table => $table1,
-    param => {$key1 => 5},
     where => [
         "$key1 = :$key1 and $key2 = :$key2",
         {$key1 => 1, $key2 => 2}
@@ -2421,10 +2421,10 @@ $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
 $dbi->insert(
+    {$key3 => 3},
     primary_key => [$key1, $key2], 
     table => $table1,
     id => [1, 2],
-    param => {$key3 => 3}
 );
 is($dbi->select(table => $table1)->one->{$key1}, 1);
 is($dbi->select(table => $table1)->one->{$key2}, 2);
@@ -2432,10 +2432,10 @@ is($dbi->select(table => $table1)->one->{$key3}, 3);
 
 $dbi->delete_all(table => $table1);
 $dbi->insert(
+    {$key2 => 2, $key3 => 3},
     primary_key => $key1, 
     table => $table1,
     id => 0,
-    param => {$key2 => 2, $key3 => 3}
 );
 
 is($dbi->select(table => $table1)->one->{$key1}, 0);
@@ -2489,8 +2489,8 @@ $dbi = MyDBI6->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
 $dbi->model($table1)->insert(
+    {$key3 => 3},
     id => [1, 2],
-    param => {$key3 => 3}
 );
 $result = $dbi->model($table1)->select;
 $row = $result->one;
@@ -2515,7 +2515,7 @@ test 'update and id option';
 $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
 $dbi->update(
     table => $table1,
     primary_key => [$key1, $key2],
@@ -2541,7 +2541,7 @@ is($dbi->select(table => $table1)->one->{$key3}, 4);
 $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
 $dbi->update(
     {$key3 => 4},
     table => $table1,
@@ -2557,7 +2557,7 @@ test 'model update and id option';
 $dbi = MyDBI6->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
 $dbi->model($table1)->update(
     id => [1, 2],
     param => {$key3 => 4}
@@ -2573,7 +2573,7 @@ test 'delete and id option';
 $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
 $dbi->delete(
     table => $table1,
     primary_key => [$key1, $key2],
@@ -2598,7 +2598,7 @@ eval { $dbi->execute("drop table $table3") };
 $dbi->execute($create_table1_2);
 $dbi->execute($create_table2_2);
 $dbi->execute($create_table3);
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
 $dbi->model($table1)->delete(id => [1, 2]);
 is_deeply($dbi->select(table => $table1)->all, []);
 $dbi->insert(table => $table2, param => {$key1 => 1, $key2 => 2, $key3 => 3});
@@ -2613,7 +2613,7 @@ test 'select and id option';
 $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
 $result = $dbi->select(
     table => $table1,
     primary_key => [$key1, $key2],
@@ -2637,7 +2637,7 @@ is($row->{$key2}, 2);
 is($row->{$key3}, 3);
 
 $dbi->delete_all(table => $table1);
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
 $result = $dbi->select(
     table => $table1,
     primary_key => [$key1, $key2],
@@ -2653,7 +2653,7 @@ test 'model select_at';
 $dbi = MyDBI6->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2, $key3 => 3});
+$dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3}, table => $table1);
 $result = $dbi->model($table1)->select(id => [1, 2]);
 $row = $result->one;
 is($row->{$key1}, 1);
