@@ -1,4 +1,6 @@
 0.1743
+    - fixed bug that update_all can't receive parameter as first argument
+    - fixed bug that delete_all can't receive parameter as first argument
     - fixed where clause parsing bug when time(like 00:00:00) contain
 0.1742
     - fixed update_or_insert method bug
